--- a/Space-Invaders.html
+++ b/Space-Invaders.html
@@ -7,17 +7,42 @@
       background-color: #000;
       border: 1px solid #fff;
     }
+    body {
+            margin-top: 50px;
+        }
+
+
+    .navbar {
+      background-color: #222;
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
   </style>
 </head>
 <header>
-  <nav>
-      <ul>
-        <li class="active"><a href="home.html">Accueil</a></li>
-        <li><a href="jeux/spaceinvaders.html">Space Invaders</a></li>
-        <li><a href="cv.html">CV</a></li>
-      </ul>
-  </nav>
-  
+  <div class="navbar">
+    <a href="menu.html">Accueil</a>
+    <a href="Space-Invaders.html">Space Invaders</a>
+    <a href="snake.html">Snake</a>
+    <a href="cv.html">CV</a>
+  </div>
 </header>
 
 <body>
@@ -33,7 +58,7 @@
     var invaders = [];
     var invaderY = 50; // Position en Y des envahisseurs
     var invaderImage = new Image();
-    invaderImage.src = "image.png";
+    invaderImage.src = "img/image.png";
     var invaderSpeed = 3;
     var invaderDirection = 1;
     var maxInvaders = 10;
@@ -46,7 +71,7 @@
       canvas = document.getElementById("gameCanvas");
       context = canvas.getContext("2d");
       playerImage = new Image();
-      playerImage.src = "image2.png";
+      playerImage.src = "img/image2.png";
       player = {
         x: canvas.width / 2 - 10,
         y: canvas.height - 30,
@@ -204,15 +229,15 @@
     }
 
     // Stocker les touches actuellement enfoncées
-    document.addEventListener("keydown", function(event) {
+    document.addEventListener("keydown", function (event) {
       keysPressed[event.key] = true;
     });
 
-    document.addEventListener("keyup", function(event) {
+    document.addEventListener("keyup", function (event) {
       keysPressed[event.key] = false;
     });
 
-    document.addEventListener("keydown", function(event) {
+    document.addEventListener("keydown", function (event) {
       if (event.key === " ") {
         projectiles.push({
           x: player.x + player.width / 2,
