--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,39 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <style>
+        .navbar {
+            background-color: #222;
+            overflow: hidden;
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
 </head>
+<header>
+    <div class="navbar">
+        <a href="menu.html">Accueil</a>
+        <a href="Space-Invaders.html">Space Invaders</a>
+        <a href="snake.html">Snake</a>
+        <a href="cv.html">CV</a>
+    </div>
+</header>
 
 <body>
     <main class="resume-contents">
