--- a/Space-Invaders.html
+++ b/Space-Invaders.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 
 <head>
   <style>
@@ -14,6 +18,7 @@
 
 
     .navbar {
+      font-family: 'Raleway', sans-serif;
       background-color: #222;
       overflow: hidden;
       position: fixed;
