--- a/menu.html
+++ b/menu.html
@@ -59,6 +59,7 @@
         }
 
         .navbar {
+            font-family: 'Raleway', sans-serif;
             background-color: #222;
             overflow: hidden;
             position: fixed;
