--- a/snake.html
+++ b/snake.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+
 
 <head>
     <title>Snake Game</title>
@@ -14,6 +19,7 @@
 
         .navbar {
             background-color: #222;
+            font-family: 'Raleway', sans-serif;
             overflow: hidden;
             position: fixed;
             top: 0;
